# ChangeLog for app-text/new
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/new/ChangeLog,v 1.17 2007/05/14 20:13:35 bangert Exp $

  14 May 2007; Thilo Bangert <bangert@gentoo.org> metadata.xml:
  add <herd>no-herd</herd>

  04 Feb 2007; Raúl Porcel <armin76@gentoo.org> -files/new-gcc-3.patch,
  -new-1.3.2.ebuild:
  Remove broken

  04 Feb 2007; Steve Dibb <beandog@gentoo.org> new-1.3.5.ebuild:
  amd64 stable, bug 151429

  20 Jan 2007; nixnut <nixnut@gentoo.org> new-1.3.5.ebuild:
  Stable on ppc wrt bug 151429

  19 Jan 2007; Raúl Porcel <armin76@gentoo.org> new-1.3.5.ebuild:
  stable x86 wrt bug 151429

*new-1.3.5 (19 Jan 2007)

  19 Jan 2007; Raúl Porcel <armin76@gentoo.org> +new-1.3.5.ebuild:
  Version bump to fix bug 151429

  06 Jan 2007; Danny van Dyk <kugelfang@gentoo.org> -new-1.3.1.ebuild:
  QA: Removed unused versions.

  05 Jan 2007; Diego Pettenò <flameeyes@gentoo.org> new-1.3.2.ebuild:
  Remove gnuconfig_update usage, leave it to econf.

  24 Apr 2005; Michael Hanselmann <hansmi@gentoo.org> new-1.3.2.ebuild:
  Stable on ppc.

  21 Apr 2005; Simon Stelling <blubb@gentoo.org> new-1.3.2.ebuild:
  stable on amd64

  01 Oct 2004; <pyrania@gentoo.org> new-1.3.2.ebuild:
  Marked stable on x86. Added IUSE.

  19 Jul 2004; David Holm <dholm@gentoo.org> new-1.3.2.ebuild:
  Added to ~ppc.

*new-1.3.2 (18 Jul 2004)

  18 Jul 2004; Daniel Ahlberg <aliz@gentoo.org> :
  Version bump and gcc3 fix, closing #55382.

*new-1.3.1 (30 Oct 2002)

  30 Oct 2002; Daniel Ahlberg <aliz@gentoo.org> :
  Initial import. Ebuild contributed Zachary P. Landau <kapheine@hypa.net> 
  in #5871.