@@ -1,4 +1,4 @@
 DIST new-1.3.5.tar.gz 385927 RMD160 712d81de6d720667b52384b87f5832da1a2b1f41 SHA1 bcd05d4eedd1bbaf61ced40180c3f65673069ebd SHA256 57e9375c4a5051d10ee9d95391c5ad5f09ba7d19fd2bbe02be9e4261a5d7b7de
-EBUILD new-1.3.5.ebuild 579 RMD160 39f1ff706a6b912472df16dffb7b25085b68ac52 SHA1 85c3ba68e7e54a70b2fb9bfd567fcca984d450fc SHA256 4326354bb37285a43b725560980f5871be90b92edbce4af64e7ae6f6b5f35564
-MISC ChangeLog 1672 RMD160 f7fe90e8f88df77bb50b832b0594cc0a0578b003 SHA1 7f36360b21bb93f6945010bc3550e666ba01bdec SHA256 69dcc3887bf3d315a43b613b94a89e7bb9955cdf8c58ba8f8f54584e4a384e73
+EBUILD new-1.3.5.ebuild 627 RMD160 72e25c521faedb51e1197cbda823bebac325959c SHA1 4e74e0145e8da5d79131584f85abba44cf5d3baf SHA256 5212293a6dff921ac78d807a33a9c21588350f037f82a1139c8135775b69f731
+MISC ChangeLog 1771 RMD160 5bfb7128c6ac2bc5310c148c3129d976de0e378d SHA1 9eb59f6bf9f951442c341e9f851180cc6b7d2409 SHA256 86ab468b092f50ce8fdf42c9f020cf7709755e37c1ba73c6892cf0dea691c044
 MISC metadata.xml 231 RMD160 c13056229989c3d4f448a7c7abcff3f4ee7ce13c SHA1 2d63dfb700b223f8f37c078692a81b2237896bce SHA256 4595c2615fd7c9095517949b1a920d4457f92801eb9d46307b18aafe58ec2a8a
